2004-10-24  Nate Nielsen <nielsen@memberwebs.com>
	
	* agent/seahorse-agent.c: Restore modified gpg.conf values to previous
	values on exit (bug# 156304)
	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Format properly 
	while the file is still new
	* plugins/nautilus/seahorse-pgp-preferences-cache.c: Disable cache tab
	if another agent is running (bug# 156305)
	
2004-10-23  Adam Schreiber <sadam@clemson.edu>

	* src/seahorse-generate-druid.c: Key generation assistant stops with 
    name < 5 chars (bug# 154602)
	
2004-10-23  Nate Nielsen <nielsen@memberwebs.com>

	* seahorse-key-manager-store.c: Fix problems with showing wrong 
	columns (bug# 156167)
	* seahorse-key-store.c: Fix sorting again after above change
	* seahorse-context.c: Now updates properly when importing into
	an empty keyring (bug# 156168)
	
2004-10-20  Nate Nielsen <nielsen@memberwebs.com>

	* configure.in: Check for gedit versions 2.6 and 2.8 (bug# 155902)
	* plugins/nautilus/seahorse-pgp-preferences.glade: HIG fixes
	* configure.in:
	* plugins/nautilus/Makefile.am:
	* plugins/nautilus/seahorse-pgp-preferences.c: When agent is disabled
	make sure the cache stuff in preferences doesn't get compiled
	* configure.in:
	* seahorse-agent.c: Check for setresuid/gid and when not found fallback
	to setuid/gid (bug# 156078) [Julio M. Merino Vidal]
	
2004-10-19  Nate Nielsen <nielsen@memberwebs.com>

	* configure.in: Version 0.7.4
	* configure.in: Changing to post release incrementing
		
2004-10-18  Nate Nielsen <nielsen@memberwebs.com>

	* src/main.c: string abbreviation change (bug# 155632)
	* agent/seahorse-agent-prompt.c: Fixed uninitialized memory
	problem which caused 'cancel' not to work on password prompts.
	
2004-10-14  Nate Nielsen <nielsen@memberwebs.com>
	
	* agent/*
	* data/seahorse.schemas.in:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-gpg-options.c:
	* libseahorse/seahorse-gpg-options.h:
	* plugins/nautilus/Makefile.am:
	* plugins/nautilus/seahorse-pgp-preferences.c: