@@ -1,3 +1,8 @@
+2004-10-25  Nate Nielsen <nielsen@memberwebs.com>
+
+	* libseahorse/seahorse-context.c: Fix crash when no 'Encrypt to Self' 
+	but no default key selected
+	
 2004-10-24  Nate Nielsen <nielsen@memberwebs.com>
 	
 	* agent/seahorse-agent.c: Restore modified gpg.conf values to previous
